# quadconn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  moteus_config.txt  requirements.txt  requirements_minipc.txt  requirements_operator.txt  requirements_utils.txt
control/: CMakeLists.txt  README.md
control/script/: ik.py
control/src/cpp/: load_model.cpp  main.cpp
control/src/python/: main.py
control/src/python/robot/: __init__.py  robot.py  robot_visualizer.py
croc_/: 3dleg.py
doc/: git_cheat_sheet.md  startup_cheat_sheet.md  video_cheat_sheet.md
motor/: CMakeLists.txt  README.md
motor/run_scripts/: run_controller.sh  run_ik.sh
motor/src/iceoryx2_node/: xyz.hpp
motor/src/python_scripts/: ik.py  requirements.txt  requirements_conda.txt  run.sh
motor/src/usr/: pInverse_Kinematics_Solver.cpp  sMotor_Gamepad.cpp  sMotor_Interface.cpp
script/: ik.py  visualize.py
scripts/: 2d_ik_plot.py
scripts/bash/: common.sh  data_log.csv  monitor.sh  open_mic.sh  open_speakers.sh  run_camera.sh  run_controller.sh  run_controller_sender.sh  run_controls.sh  run_diagnostics.sh  run_ik.sh  run_lidar.sh  run_motor_controller.sh  run_udp_diagnostics.sh  run_udp_gamepad_receiver.sh  zero_motors.sh
scripts/python/: kinematics.py
services/: controller_udp.service  controls.service  diagnostics.service  lidar.service  motor_interface.service  quadconn_activate.target  quadconn_startup.target  zero_motors.service
src/: Bindings.cpp  FastMath.cpp  FastMath.hpp  Manipulator.cpp  Manipulator.hpp  clik.cpp  main.cpp  main.py
src/cpp/common/: CMakeLists.txt  command.hpp  gamepad_data.hpp  joint_angles.hpp  motor_diagnostics.hpp  quad_common.hpp  quad_ipc.hpp  system_logic.hpp
src/cpp/control/: CMakeLists.txt  command.hpp  joint_angles.hpp  leg_ik.cpp  leg_ik.hpp  main.cpp  quad_command.hpp  quad_config.hpp  quad_control.cpp  quad_control.hpp  quad_ipc.hpp
src/cpp/iceory/: gamepad_data.hpp  motor_diagnostics.hpp  three_dof_pvt.hpp  three_dof_theta.hpp  twelve_dof_theta.hpp
src/cpp/motor/: CMakeLists.txt  diagnostics_reader.cpp  gamepad_data.hpp  motor_config.hpp  motor_interface.cpp  sMotor_Interface.cpp  twelve_dof_theta.hpp  zero_motors.cpp
src/cpp/perception/: CMakeLists.txt  camera_stream  camera_stream.cpp  raw_lidar.cpp  sf45_collector.cpp  sf45_helpers.hpp  udp_sender.cpp
src/cpp/usr/: camera_stream.cpp  diagnostics_reader.cpp  sMotor_Interface.cpp  zero_motors.cpp
src/python/: bullet.py  controller_sender.py  gamepad_data.py  gui.py  ik.py  joint_angles.py  killswitch.py  motor_diagnostics.py  pController.py  quad_common.py  quad_ipc.py  sim.py  start_gui.sh  system_logic.py  telem_test.py  udp_gamepad_receiver.py
src/python/archive/: killswitch.py
src/python/croc/: 1leg.urdf  3dleg.py
src/python/gui/: FastSlam.py  OccupancyGrid.py  ScanMatcher_OGBased.py  configurations.py  gamepad_data.py  main.py  motor_diagnostics.py  sf45_collector.py  slam_plotter.py  workers.py
src/python/iceory/: three_dof_theta.py  xyz.py
src/python/lidar/: sf45_collector.py  sf45_collector_updated.py
src/python/lidar/SLAM-2D-LIDAR-SCAN/Algorithm/: FastSlam.py  slam_plotter.py
src/python/lidar/SLAM-2D-LIDAR-SCAN/Utils/: OccupancyGrid.py  ScanMatcher_OGBased.py
src/python/robot/: robot_visualizer.py
src/python/user_files/: gui.py  user_controller.py  user_controller_windows.py
urdf/: 3dof_leg.urdf  README.md  basic_quad.urdf  basic_quad.urdf.xacro  leg3dof.urdf
urdf/quad/: CMakeLists.txt  package.xml
urdf/quad/config/: joint_names_quad.yaml
urdf/quad/launch/: display.launch  gazebo.launch
urdf/quad/meshes/: bl_calf.STL  bl_foot.STL  bl_thigh.STL  br_calf.STL  br_foot.STL  br_thigh.STL  fl_calf.STL  fl_foot.STL  fl_thigh.STL  fr_calf.STL  fr_foot.STL  fr_thigh.STL
urdf/quad/urdf/: quad.csv  quad.urdf
